# EtaStudio

./: .gitignore  .nvim.lua  CMakeLists.txt  Makefile  Notes  TODO  test
assets/shaders/: basic.frag  basic.vert  common.glsl  default.vert  default_metallic.frag  metallic_roughness.frag
demos/: cube.hpp  demo_systems.hpp  geometry.hpp  main.cpp  pendulum.hpp  rotation_system.hpp  violin.hpp
include/: eta_app.hpp  eta_asset.hpp  eta_asset_manager.hpp  eta_bindings.hpp  eta_buffer_binding.hpp  eta_default_components.hpp  eta_default_materials.hpp  eta_descriptor.hpp  eta_device.hpp  eta_engine.hpp  eta_graphics_pipeline.hpp  eta_initial_scene.hpp  eta_input_system.hpp  eta_material.hpp  eta_mesh.hpp  eta_model.hpp  eta_pch.hpp  eta_pipeline.hpp  eta_pipelines.hpp  eta_rendering_system.hpp  eta_scene.hpp  eta_shader.hpp  eta_swapchain.hpp  eta_system.hpp  eta_texture.hpp  eta_utils.hpp  eta_vulkan_images.hpp  eta_vulkan_init.hpp  eta_window.hpp  ets_asset.hpp  ets_asset_manager.hpp  ets_default_components.hpp  ets_descriptor.hpp  ets_descriptor_allocator.hpp  ets_engine.hpp  ets_initial_scene.hpp  ets_mesh.hpp  ets_model.hpp  ets_pch.hpp  ets_renderer.hpp  (+6 more)
shaders/: common.glsl
src/: eta_bindings.cpp  eta_buffer_binding.cpp  eta_descriptor.cpp  eta_device.cpp  eta_engine.cpp  eta_graphics_pipeline.cpp  eta_input_system.cpp  eta_material.cpp  eta_mesh.cpp  eta_model.cpp  eta_pipeline.cpp  eta_rendering_system.cpp  eta_scene.cpp  eta_swapchain.cpp  eta_system.cpp  eta_texture.cpp  ets_descriptor.cpp  ets_descriptor_allocator.cpp  ets_engine.cpp  ets_renderer.cpp  main.cpp
